# ucx-ping-pong

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md  run.sh  ucp_ping_pong  ucp_ping_pong.c  ucp_ping_pong.h  ucx_pingping.c
